--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -18,13 +18,11 @@ header {
     list-style-type: none;
     display: flex;
     gap: 1rem;
+    li a {
+        text-decoration: none;
+        color: #1c1c1c;
+    }
 }
-
-.nav-list li a {
-    text-decoration: none;
-    color: #1c1c1c;
-}
-
 
 .abrir-menu,
 .cerrar-menu {
@@ -33,14 +31,6 @@ header {
     font-size: 8vh;
     background-color: transparent;
     cursor: pointer;
-}
-
-.abrir-menu {
-    color: #dfddd1;
-
-}
-
-.cerrar-menu {
     color: #dfddd1;
 }
 
@@ -70,17 +60,14 @@ header {
 .nav-list {
     flex-direction: column;
     align-items: start;
-}
-
-.nav-list li a {
-    color: #dfddd1;
-    font-size: 10vw;
-    z-index: 99;
+    li a {
+        color: #dfddd1;
+        font-size: 10vw;
+        z-index: 99;
+    }
 }
 
 @media screen and (min-width: 544px) {
-
-
     .abrir-menu,
     .cerrar-menu {
         display: none;
@@ -108,13 +95,13 @@ header {
 
     .nav-list {
         flex-direction: row;
+        li a {
+            color: #191916;
+            font-size: 4vh;
+            padding: 2vh;
+    
+    
+        }
     }
 
-    .nav-list li a {
-        color: #191916;
-        font-size: 4vh;
-        padding: 2vh;
-
-
-    }
 }
