--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ header {
   z-index: 99;
 }
 
-@media screen and (min-width: 544px) {
+@media screen and (min-width: 740px) {
   .abrir-menu,
   .cerrar-menu {
     display: none;
@@ -244,6 +244,65 @@ button[type=submit] {
   align-items: center;
   width: 80vw;
   height: 30vh;
+}
+
+/*:::::Pie de Pagina*/
+.pie-pagina {
+  width: 100%;
+  background-color: #191916;
+  bottom: 0;
+}
+.pie-pagina .grupo-1 {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
+  padding: 30px 0px;
+}
+.pie-pagina .grupo-1 .box figure {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pie-pagina .grupo-1 .box h2 {
+  color: #8d7a59;
+  margin-bottom: 25px;
+  font-size: 20px;
+}
+.pie-pagina .grupo-1 .box p {
+  color: #8d7a59;
+  margin-bottom: 15px;
+  font-size: 2.3vh;
+}
+.pie-pagina .grupo-1 .red-social a {
+  display: inline-block;
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  color: #67583f;
+  margin-right: 5px;
+  background-color: #131312;
+  text-align: center;
+}
+
+.grupo-2 {
+  background-color: #131312;
+  padding: 5px 5px;
+  text-align: center;
+  color: #8d7a59;
+}
+
+@media screen and (max-width: 800px) {
+  .pie-pagina .grupo-1 {
+    width: 90%;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 30px;
+    padding: 35px 0px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
