--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,4 +3,5 @@
 @import "layout/header";
 @import "layout/section";
 @import "layout/contact";
-@import "layout/map"
+@import "layout/map";
+@import "layout/footer"
