--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,5 @@
 @import "layout/contact";
 @import "layout/map";
 @import"layout/logngboots";
-@import "layout/footer"
+@import "layout/footer";
+@import "layout/ubicacion"
